--- a/.gitignore
+++ b/.gitignore
@@ -6,20 +6,16 @@ local_settings.py
 db.sqlite3
 media/
 staticfiles/
-
 .venv/
 venv/
 env/
 ENV/
 .env
 .venv
-
-.vscode/
 .idea/
-*.swp
-*.swo
-*~
-
+*.iws
+*.iml
+*.ipr
 .DS_Store
 .DS_Store?
 ._*
@@ -27,16 +23,22 @@ ENV/
 .Trashes
 ehthumbs.db
 Thumbs.db
- 
 *.db
 *.sqlite3
-
 *.backup
 *.bak
-
-.idea/
-*.iws
-*.iml
-*.ipr
-
-.vscode/
+*.egg-info/
+dist/
+build/
+*.egg
+.Python
+.ipynb_checkpoints
+.env
+.venv
+env/
+venv/
+/site
+.mypy_cache/
+.dmypy.json
+dmypy.json
+.pyre/
