--- a/.gitignore
+++ b/.gitignore
@@ -1,44 +1,23 @@
-*.log
-*.pot
-*.pyc
-__pycache__/
-local_settings.py
-db.sqlite3
-media/
-staticfiles/
+venv/
 .venv/
-venv/
-env/
-ENV/
-.env
-.venv
-.idea/
-*.iws
-*.iml
-*.ipr
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
-*.db
-*.sqlite3
-*.backup
-*.bak
-*.egg-info/
-dist/
-build/
-*.egg
+
+db.sqlite3
+
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
 .Python
-.ipynb_checkpoints
 .env
-.venv
-env/
-venv/
-/site
-.mypy_cache/
-.dmypy.json
-dmypy.json
-.pyre/
+.pytest_cache/
+.coverage
+htmlcov/
+
+.idea/
+.vscode/
+*.swp
+*.swo
+
+*.log
+/staticfiles/
+/media/
